# Snake

./: CMakeLists.txt  README.md  Snake.pro  food.cpp  food.h  game.cpp  game.h  main.cpp  snake.cpp  snake.h
